# PolicyShield

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.server  INTEGRATION_SPEC.md  ISSUES.md  LICENSE  PHILOSOPHY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  TECHNICAL_SPEC.md  VISION.md  demo.tape  docker-compose.e2e.yml  docker-compose.yml  mkdocs.yml  policyshield.yaml  pyproject.toml  Руководство по разработке модуля «Runtime Shield» для Policy2Proof.docx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
community-rules/: README.md  gdpr.yaml  hipaa.yaml  pci-dss.yaml
docker/: docker-compose.openclaw.yml
docs/: QUICKSTART.md  brainstorm_v1.md  comparison.md  deployment.md  e2e_test_roadmap.md  e2e_verification_guide.md  faq.md  github-action.md  index.md  nanobot_integration.md  use-cases.md  v1_feature_ideas.md
docs/api/: core.md  engine.md  linter.md
docs/features/: audit_report.md  brainstorm_v1.md  tier1_5_approval_flow.md  tier1_5_critical.md  tier1_5_dx_adoption.md  tier1_5_lifecycle.md  tier1_5_security.md  tier1_5_server_hardening.md  tier2.md  tier2_medium.md  tier3_llm_guard.md  tier4_enterprise.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: cli.md  presets.md  testing-rules.md  writing-rules.md
docs/integrations/: crewai.md  fastapi.md  langchain.md  mcp.md  nanobot.md  openclaw-migration.md  openclaw.md  telegram.md
examples/: async_demo.py  chain_rules.yaml  crewai_demo.py  fastapi_middleware.py  langchain_demo.py  nanobot_rules.yaml  nanobot_shield_agentloop.py  nanobot_shield_example.py  openclaw.yaml  openclaw_rules.yaml  policyshield.yaml  standalone_check.py
examples/docker_compose/: docker-compose.yml  rules.yaml
examples/fastapi_agent/: README.md  app.py
examples/github-actions/: policy-check.yml
examples/policies/: compliance.yaml  full.yaml  minimal.yaml  rules_test.yaml  security.yaml
grafana/: alerts.yml
grafana/dashboards/: policyshield.json
issues/: critical.md  high.md  low.md  medium.md
plugins/openclaw/: .npmignore  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
policies/: rules.yaml
policyshield/: __init__.py  async_client.py  client.py  decorators.py  logging_config.py  mcp_proxy.py  mcp_server.py
policyshield/ai/: __init__.py  auto_rules.py  compiler.py  generator.py  templates.py
policyshield/alerts/: __init__.py  backends.py
policyshield/approval/: __init__.py  base.py  cache.py  cli_backend.py  (+7 more)
prompts/: 01_project_setup.md  01_rule_linter.md  02_core_models.md  02_hot_reload.md  03_advanced_pii.md  03_yaml_parser.md  04_pii_detector.md  04_rate_limiter.md  05_approval_backend.md  05_matcher_engine.md  06_telegram_approval.md  06_verdict_builder.md  07_batch_approve.md  07_session_manager.md  08_trace_recorder.md  08_trace_stats.md  09_langchain_adapter.md  09_shield_engine.md  10_finalize_v02.md  10_nanobot_integration.md  11_cli.md  12_e2e_tests.md  13_finalize.md  README.md
scripts/: check_sdk_sync.py  e2e_docker.sh  e2e_test.sh
tests/: conftest.py  e2e.sh  e2e_features.py  e2e_hotreload_kill.py  test_adaptive_ratelimit.py  test_alert_backends.py  test_alert_engine.py  test_api_rate_limit.py  test_approval.py  test_approval_cache.py  test_approval_hardening.py  test_approval_metrics.py  test_async_client.py  test_async_engine.py  test_audit_fixes.py  test_auto_rules.py  test_backend_healthcheck.py  test_benchmark.py  test_budget.py  test_bugfix_coverage.py  test_canary.py  test_chain_examples.py  test_chain_integration.py  test_chain_matcher.py  test_chain_parser.py  test_ci_config.py  test_circuit_breaker.py  test_cli.py  test_cli_diff.py  test_cli_generate.py  test_cli_generate_rules.py  test_cli_init.py  test_cli_nanobot.py  test_cli_openclaw.py  test_cli_playground.py  test_cli_replay.py  test_cli_simulate.py  test_cli_tls.py  test_compile_apply.py  test_compiler.py  (+93 more)
(+227 files in other folders)
