[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyshield"
version = "0.2.0"
description = "Declarative firewall for AI agent tool calls"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PolicyShield Team" },
]
keywords = ["ai", "agent", "firewall", "policy", "security", "tool-calls"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.30"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
policyshield = "policyshield.cli.main:app"

[project.urls]
Homepage = "https://github.com/policyshield/policyshield"
Documentation = "https://github.com/policyshield/policyshield/docs"
Repository = "https://github.com/policyshield/policyshield"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "prompts/",
    ".github/",
    ".venv/",
    "dist/",
]

[tool.ruff]
line-length = 120
target-version = "py310"
